[gd_scene load_steps=2 format=3 uid="uid://3ysjurqavo4v"]

[ext_resource type="Script" uid="uid://cgpjc7u5suicg" path="res://Cutscenes/CutsceneBackEndStuff/cutscene_character_controller.gd" id="1_b6gmf"]

[node name="CutsceneCharacterController" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b6gmf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlinkTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
